<resources>
    <string name="app_name">Zaki</string>

    <!-- GameFragment button labels -->
    <string name="button_label_generate">Generate</string>
    <string name="button_label_replay">Replay</string>
    <string name="button_label_large">Large</string>
    <string name="button_label_small">Small</string>

    <!-- SolutionFragment labels -->
    <string name="str_no_solutions">No solutions found.</string>
    <plurals name="str_solutions">
        <item quantity="one">Found only %d solution.</item>
        <item quantity="other">Found %d solutions.</item>
    </plurals>

    <!-- Main menu items -->
    <string name="settings_menu_label">Settings</string>
    <string name="about_menu_label">About</string>


    <!-- Settings labels -->
    <string name="calculation_duration_preference_label">Thinking time</string>
    <string name="play_music_preference_label">Enable muzak</string>
    <string name="song_selection_preference_label">Pick a song</string>
    <string name="solution_render_latex_preference_label">Render as LaTeX</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Animation variable -->
    <integer name="swing_anim_time">750</integer>
</resources>