<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePlayFragment">

    <GridLayout
        android:id="@+id/number_card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_marginTop="16dp"

        android:alignmentMode="alignBounds"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="true"
        tools:context=".NumbersFragment">
        <!-- 6 number cards are created programmatically -->
    </GridLayout>

    <GridLayout
        android:id="@+id/target_card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_card_container"
        android:columnCount="3"
        android:rowCount="1"
        android:layout_gravity="center_horizontal"
        android:padding="48dp"
        android:layout_marginTop="12dp"

        android:alignmentMode="alignBounds"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="true"
        tools:context=".NumbersFragment">

        <!-- 3 target cards are created programmatically -->
    </GridLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/target_card_container"
        android:minWidth="200dp"
        android:indeterminate="false"
        android:progress="0"
        android:max="100"/>

    <TextView
        android:id="@+id/solutions_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        android:visibility="invisible"
        android:text=""
        />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        tools:context=".ButtonFragment">

        <Button
            android:id="@+id/button_small_inc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/button_label_small" />

        <Button
            android:id="@+id/button_generate_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:visibility="invisible"
            android:text="@string/button_label_generate" />

        <Button
            android:id="@+id/button_large_inc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/button_label_large" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>